[gd_scene load_steps=11 format=3 uid="uid://ratgw1qkrqei"]

[ext_resource type="Theme" uid="uid://djq0273pib1pg" path="res://themes/main_theme.tres" id="1_y3kbt"]
[ext_resource type="Script" path="res://card_stuff/scripts/cardUI.gd" id="2_qr05n"]
[ext_resource type="StyleBox" uid="uid://cx8wt73pt3lqi" path="res://card_stuff/card_UI/card_dragging_stylebox.tres" id="3_tc0kw"]
[ext_resource type="Script" path="res://card_stuff/card_UI/card_state_machine.gd" id="3_uvuw7"]
[ext_resource type="Texture2D" uid="uid://budipl00muh1k" path="res://Art/Fall/Fall_1.png" id="3_wlx1y"]
[ext_resource type="Script" path="res://card_stuff/card_UI/card_states/card_base_state.gd" id="4_rwgrc"]
[ext_resource type="Script" path="res://card_stuff/card_UI/card_states/card_clicked_state.gd" id="5_5axm7"]
[ext_resource type="Script" path="res://card_stuff/card_UI/card_states/card_dragging_state.gd" id="6_mm7sx"]
[ext_resource type="Script" path="res://card_stuff/card_UI/card_states/card_released_state.gd" id="7_6gj3g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qehi8"]
size = Vector2(100.5, 120)

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(100, 120)
layout_mode = 3
anchors_preset = 0
offset_right = 100.0
offset_bottom = 120.0
theme = ExtResource("1_y3kbt")
script = ExtResource("2_qr05n")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("3_tc0kw")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -60.0
offset_right = 50.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_wlx1y")
expand_mode = 1
stretch_mode = 5

[node name="DropPointDetector" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetector"]
position = Vector2(50.25, 60)
shape = SubResource("RectangleShape2D_qehi8")

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_uvuw7")
initial_state = NodePath("CardBaseState")

[node name="CardBaseState" type="Node" parent="CardStateMachine"]
script = ExtResource("4_rwgrc")

[node name="CardClickedState" type="Node" parent="CardStateMachine"]
script = ExtResource("5_5axm7")
state = 1

[node name="CardDraggingState" type="Node" parent="CardStateMachine"]
script = ExtResource("6_mm7sx")
state = 2

[node name="CardReleasedState" type="Node" parent="CardStateMachine"]
script = ExtResource("7_6gj3g")
state = 4

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="DropPointDetector" to="." method="_on_drop_point_detector_area_entered"]
[connection signal="area_exited" from="DropPointDetector" to="." method="_on_drop_point_detector_area_exited"]
